PRC-821: added cl_file filter to application GETs + added missing tantalisId filter + ignored yarn.lock
